                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.0
  [Remove entries to the current 2.0 and 2.2 section below, when backported]

  *) mod_dbd: Key the storage of prepared statements on the hex string
     value of server_rec, rather than the server name, as the server name
     may change (eg when the server name is set) at any time, causing
     weird behaviour in modules dependent on mod_dbd. [Graham Leggett]

  *) mod_proxy_fcgi: Added win32 build. [Mladen Turk]

  *) mod_authnz_ldap: Add an AuthLDAPRemoteUserAttribute directive. If
     set, REMOTE_USER will be set to this attribute, rather than the
     username supplied by the user. Useful for example when you want users
     to log in using an email address, but need to supply a userid instead
     to the backend. [Graham Leggett]

  *) Allow mod_dumpio to log at other than DEBUG levels via
     the new DumpIOLogLevel directive. [Jim Jagielski]

  *) mod_disk_cache: Implement read-while-caching.
     [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_disk_cache: NULL fd pointers when closing them, fix missing
     close/flush, remove some unneccessary code duplication instead
     of calling the right helper in replace_brigade_with_cache().
     [Niklas Edmundsson <nikke acc.umu.se>]

  *) sendfile_nonblocking() takes the _brigade_ as an argument, gets 
     the first bucket from the brigade, finds it not to be a FILE
     bucket and barfs. The fix is to pass a bucket rather than a brigade.
     [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_disk_cache: Do away with the write-to-file-then-move-in-place
     mentality. [Niklas Edmundsson <nikke acc.umu.se>]

  *) mod_rewrite: support rewritemap by SQL query [Nick Kew]

  *) Fix issue which could cause piped loggers to be orphaned and never
     terminate after a graceful restart.  PR 40651.  [Joe Orton, 
     Ruediger Pluem]

  *) mod_headers: support regexp-based editing of HTTP headers [Nick Kew]
